--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,19 +6,29 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-version: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
+        php-version: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
     steps:
-      - uses: actions/checkout@v2
-      - name: Cache composer downloads
-        uses: actions/cache@v1
+
+      # Setup the correct PHP version
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          path: /home/runner/.composer/cache/files
-          key: composer-${{ hashFiles('**/composer.json') }}
-          restore-keys: |
-            composer-
-      - uses: php-actions/composer@v1
+          php-version: ${{ matrix.php-version }}
+          coverage: xdebug
+
+      # Check out the code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Composer install
+      - name: Run composer update
+        run: composer update
+
+      # Run unit tests with code coverage
       - name: Run phpunit
         run: vendor/bin/phpunit --coverage-clover=coverage/coverage.xml
+
+      # Upload the code coverage artifact
       - name: Upload code coverage artifact
         uses: actions/upload-artifact@v1
         with:
@@ -29,10 +39,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      # Check out the code
       - uses: actions/checkout@v2
+
+      # Download the coverage artifact
       - name: Download code coverage artifact
         uses: actions/download-artifact@v1
         with:
           name: coverage
+
+      # Upload coverage artifact
       - name: Upload code coverage
         run: bash <(curl -s https://codecov.io/bash) -Z -t ${{ secrets.CODECOV_TOKEN }} -f coverage/coverage.xml
